--- a/.github/workflows/deploy to s3.yml
+++ b/.github/workflows/deploy to s3.yml
@@ -5,7 +5,7 @@ on:
        - main
 jobs:
    deploy:
-      runs-on: ubuntu-latest
+      runs-on: ubuntu
       steps:
       - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
